@@ -57,6 +57,9 @@ LanguageTool Change Log
 
 -Internals:
     -The compound rule now ignores tokens that have been immunized in the disambiguation.xml
+    -If you're extending the XML rules as described at http://wiki.languagetool.org/tips-and-tricks#toc2,
+     the external rule and disambiguation files can now be hosted on a password-protected server
+     by specifying an URL like this: http://user:password@example.org/path/user-rules.xml
 
 
 2.6 (2014-06-30)
